Support finding multiple matches for pointRoleType

--- a/SummerSunConsoleHost/SummerSunConsoleHost.csproj
+++ b/SummerSunConsoleHost/SummerSunConsoleHost.csproj
@@ -85,7 +85,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="NinjectBindings.cs" />
+    <Compile Include="SummerSunNinjectBindings.cs" />
     <Compile Include="Options.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
