Help user search through Companies

--- a/SummerSunConsoleHost/App.config
+++ b/SummerSunConsoleHost/App.config
@@ -6,6 +6,12 @@
       <add key="JCIIMSEndpoint" value="https://ims-qa.johnsoncontrols.com/issue/oauth2/token" />
       <add key="PanoptixBuildingApiEndpoint" value="https://pxqa--apibas-cloudapp-net-c2m5yzzdry82.runscope.net/" />
       <add key="PanoptixCompanyApiEndpoint" value="https://qa-apiproxy.panoptix.com/companies" />
+      <!-- PROD SETTINGS
+      <add key="JCIIMSClientId" value="0545b504" />
+      <add key="JCIIMSClientSecret" value="ef24eb511ce268b8c78a517b8d447a3f" />
+      <add key="JCIIMSEndpoint" value="https://identity.johnsoncontrols.com/issue/oauth2/token" />
+      <add key="PanoptixBuildingApiEndpoint" value="https://api.panoptix.com/building" />
+      <add key="PanoptixCompanyApiEndpoint" value="https://api.panoptix.com/companies" />-->
       <add key="UseBuildingSDKProxy" value="true" />
     </appSettings>
     <runtime>
