Rename to BuildingApi and general simplification

--- a/SummerSunConsoleHost/App.config
+++ b/SummerSunConsoleHost/App.config
@@ -1,31 +1,15 @@
 ﻿<?xml version="1.0" encoding="utf-8" ?>
 <configuration>
     <appSettings>
-      <add key="JCIIMSClientId" value="000f678d" />
-      <add key="JCIIMSClientSecret" value="40f6ef930ae7fee6bbb7611fca81fb8b" />
-      <add key="JCIIMSEndpoint" value="https://ims-qa.johnsoncontrols.com/issue/oauth2/token" />
-      <add key="PanoptixBuildingApiEndpoint" value="https://pxqa--apibas-cloudapp-net-c2m5yzzdry82.runscope.net/" />
-      <add key="PanoptixCompanyApiEndpoint" value="https://qa-apiproxy.panoptix.com/companies" />
-      <!-- PROD SETTINGS
-      <add key="JCIIMSClientId" value="0545b504" />
-      <add key="JCIIMSClientSecret" value="ef24eb511ce268b8c78a517b8d447a3f" />
-      <add key="JCIIMSEndpoint" value="https://identity.johnsoncontrols.com/issue/oauth2/token" />
-      <add key="PanoptixBuildingApiEndpoint" value="https://api.panoptix.com/building" />
-      <add key="PanoptixCompanyApiEndpoint" value="https://api.panoptix.com/companies" />-->
-      <add key="UseBuildingSDKProxy" value="true" />
+      <add key="JciClientId" value="000f678d" />
+      <add key="JciClientSecret" value="40f6ef930ae7fee6bbb7611fca81fb8b" />
+      <add key="JciTokenEndpoint" value="https://ims-qa.johnsoncontrols.com/issue/oauth2/token" />
+      <add key="JciBuildingApiEndpoint" value="https://pxqa--apibas-cloudapp-net-c2m5yzzdry82.runscope.net/" />
+      <add key="JciCompanyApiEndpoint" value="https://qa-apiproxy.panoptix.com/companies" />
     </appSettings>
-    <runtime>
-      <!--<assemblyBinding xmlns="urn:schemas-microsoft-com:asm.v1">
-        <dependentAssembly>
-          <assemblyIdentity name="System.Net.Http" publicKeyToken="b03f5f7f11d50a3a" culture="neutral" />
-          <bindingRedirect oldVersion="0.0.0.0-2.2.15.0" newVersion="2.2.15.0" />
-        </dependentAssembly>
-      </assemblyBinding>-->
-    </runtime>
     <system.net>
       <defaultProxy enabled="true" useDefaultCredentials="true">
         <proxy />
-        <!--change the proxy in ManageWebProxy.cs in order to test in fiddler -->
         <bypasslist />
         <module />
       </defaultProxy>
