--- a/SummerSun/BuildingApi.csproj
+++ b/SummerSun/BuildingApi.csproj
@@ -7,8 +7,8 @@
     <ProjectGuid>{B29BC045-00DA-4B3C-A0FA-AEB2D72FC51E}</ProjectGuid>
     <OutputType>Library</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>SummerSun</RootNamespace>
-    <AssemblyName>SummerSun</AssemblyName>
+    <RootNamespace>BuildingApi</RootNamespace>
+    <AssemblyName>BuildingApi</AssemblyName>
     <TargetFrameworkVersion>v4.5.1</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
   </PropertyGroup>
@@ -30,32 +30,11 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <ItemGroup>
-    <Reference Include="AutoMapper">
-      <HintPath>..\packages\AutoMapper.2.2.1\lib\net40\AutoMapper.dll</HintPath>
-    </Reference>
     <Reference Include="Common.Logging">
       <HintPath>..\packages\Common.Logging.2.0.0\lib\2.0\Common.Logging.dll</HintPath>
     </Reference>
     <Reference Include="Flurl">
       <HintPath>..\packages\Flurl.0.2.0\lib\portable-win+net40+sl40+wp+Xbox40\Flurl.dll</HintPath>
-    </Reference>
-    <Reference Include="Jci.Panoptix.Cda.Building.Core">
-      <HintPath>..\packages\Jci.Panoptix.Building.1.0.60.106655\lib\net40\Jci.Panoptix.Cda.Building.Core.dll</HintPath>
-    </Reference>
-    <Reference Include="Jci.Panoptix.Cda.Building.Domain">
-      <HintPath>..\packages\Jci.Panoptix.Building.Domain.1.0.59.106526\lib\net40\Jci.Panoptix.Cda.Building.Domain.dll</HintPath>
-    </Reference>
-    <Reference Include="Jci.Panoptix.Cda.Building.Injector">
-      <HintPath>..\packages\Jci.Panoptix.Building.1.0.60.106655\lib\net40\Jci.Panoptix.Cda.Building.Injector.dll</HintPath>
-    </Reference>
-    <Reference Include="Jci.Panoptix.Cda.Building.Storage">
-      <HintPath>..\packages\Jci.Panoptix.Building.1.0.60.106655\lib\net40\Jci.Panoptix.Cda.Building.Storage.dll</HintPath>
-    </Reference>
-    <Reference Include="Jci.Panoptix.Cda.Building.Storage.Entities">
-      <HintPath>..\packages\Jci.Panoptix.Building.1.0.60.106655\lib\net40\Jci.Panoptix.Cda.Building.Storage.Entities.dll</HintPath>
-    </Reference>
-    <Reference Include="Jci.Panoptix.Cda.Building.Storage.Interfaces">
-      <HintPath>..\packages\Jci.Panoptix.Building.1.0.60.106655\lib\net40\Jci.Panoptix.Cda.Building.Storage.Interfaces.dll</HintPath>
     </Reference>
     <Reference Include="Newtonsoft.Json">
       <HintPath>..\packages\Newtonsoft.Json.4.5.11\lib\net40\Newtonsoft.Json.dll</HintPath>
@@ -73,21 +52,24 @@
       <HintPath>..\packages\Microsoft.Net.Http.2.2.15\lib\net45\System.Net.Http.Primitives.dll</HintPath>
     </Reference>
     <Reference Include="System.Net.Http.WebRequest" />
-    <Reference Include="System.Xml.Linq" />
-    <Reference Include="System.Data.DataSetExtensions" />
     <Reference Include="Microsoft.CSharp" />
-    <Reference Include="System.Data" />
-    <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Api\EntityLink.cs" />
-    <Compile Include="Api\Equipment.cs" />
-    <Compile Include="Api\Link.cs" />
-    <Compile Include="Api\Page.cs" />
-    <Compile Include="Api\Point.cs" />
-    <Compile Include="Api\PointRole.cs" />
-    <Compile Include="Api\SampleSummary.cs" />
-    <Compile Include="SummaryBuilder.cs" />
+    <Compile Include="Company.cs" />
+    <Compile Include="CompanyClient.cs" />
+    <Compile Include="EntityLink.cs" />
+    <Compile Include="Equipment.cs" />
+    <Compile Include="HttpHelper.cs" />
+    <Compile Include="ICompanyProvider.cs" />
+    <Compile Include="ITokenProvider.cs" />
+    <Compile Include="Link.cs" />
+    <Compile Include="Page.cs" />
+    <Compile Include="Point.cs" />
+    <Compile Include="PointRole.cs" />
+    <Compile Include="SampleSummary.cs" />
+    <Compile Include="Token.cs" />
+    <Compile Include="TokenClient.cs" />
+    <Compile Include="EquipmentClient.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
