--- a/SummerSunConsoleHost/SummerSunConsoleHost.csproj
+++ b/SummerSunConsoleHost/SummerSunConsoleHost.csproj
@@ -7,8 +7,8 @@
     <ProjectGuid>{3FC91063-16DB-405A-9D50-E2052231A9CC}</ProjectGuid>
     <OutputType>Exe</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>SummerSunConsoleHost</RootNamespace>
-    <AssemblyName>SummerSunConsoleHost</AssemblyName>
+    <RootNamespace>SummerSun</RootNamespace>
+    <AssemblyName>SummerSun</AssemblyName>
     <TargetFrameworkVersion>v4.5.1</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
     <AutoGenerateBindingRedirects>true</AutoGenerateBindingRedirects>
@@ -33,29 +33,8 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <ItemGroup>
-    <Reference Include="AutoMapper">
-      <HintPath>..\packages\AutoMapper.2.2.1\lib\net40\AutoMapper.dll</HintPath>
-    </Reference>
     <Reference Include="Common.Logging">
       <HintPath>..\packages\Common.Logging.2.0.0\lib\2.0\Common.Logging.dll</HintPath>
-    </Reference>
-    <Reference Include="Jci.Panoptix.Cda.Building.Core">
-      <HintPath>..\packages\Jci.Panoptix.Building.1.0.60.106655\lib\net40\Jci.Panoptix.Cda.Building.Core.dll</HintPath>
-    </Reference>
-    <Reference Include="Jci.Panoptix.Cda.Building.Domain">
-      <HintPath>..\packages\Jci.Panoptix.Building.Domain.1.0.59.106526\lib\net40\Jci.Panoptix.Cda.Building.Domain.dll</HintPath>
-    </Reference>
-    <Reference Include="Jci.Panoptix.Cda.Building.Injector">
-      <HintPath>..\packages\Jci.Panoptix.Building.1.0.60.106655\lib\net40\Jci.Panoptix.Cda.Building.Injector.dll</HintPath>
-    </Reference>
-    <Reference Include="Jci.Panoptix.Cda.Building.Storage">
-      <HintPath>..\packages\Jci.Panoptix.Building.1.0.60.106655\lib\net40\Jci.Panoptix.Cda.Building.Storage.dll</HintPath>
-    </Reference>
-    <Reference Include="Jci.Panoptix.Cda.Building.Storage.Entities">
-      <HintPath>..\packages\Jci.Panoptix.Building.1.0.60.106655\lib\net40\Jci.Panoptix.Cda.Building.Storage.Entities.dll</HintPath>
-    </Reference>
-    <Reference Include="Jci.Panoptix.Cda.Building.Storage.Interfaces">
-      <HintPath>..\packages\Jci.Panoptix.Building.1.0.60.106655\lib\net40\Jci.Panoptix.Cda.Building.Storage.Interfaces.dll</HintPath>
     </Reference>
     <Reference Include="Microsoft.WindowsAzure.Configuration, Version=2.0.0.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35, processorArchitecture=MSIL">
       <HintPath>..\packages\Microsoft.WindowsAzure.ConfigurationManager.2.0.3\lib\net40\Microsoft.WindowsAzure.Configuration.dll</HintPath>
@@ -78,11 +57,7 @@
       <HintPath>..\packages\Microsoft.Net.Http.2.2.15\lib\net45\System.Net.Http.Primitives.dll</HintPath>
     </Reference>
     <Reference Include="System.Net.Http.WebRequest" />
-    <Reference Include="System.Xml.Linq" />
-    <Reference Include="System.Data.DataSetExtensions" />
     <Reference Include="Microsoft.CSharp" />
-    <Reference Include="System.Data" />
-    <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
     <Compile Include="SummerSunNinjectBindings.cs" />
@@ -92,13 +67,15 @@
     <Compile Include="Settings.cs" />
   </ItemGroup>
   <ItemGroup>
-    <None Include="App.config" />
+    <None Include="App.config">
+      <SubType>Designer</SubType>
+    </None>
     <None Include="packages.config" />
   </ItemGroup>
   <ItemGroup>
-    <ProjectReference Include="..\SummerSun\SummerSun.csproj">
+    <ProjectReference Include="..\SummerSun\BuildingApi.csproj">
       <Project>{b29bc045-00da-4b3c-a0fa-aeb2d72fc51e}</Project>
-      <Name>SummerSun</Name>
+      <Name>BuildingApi</Name>
     </ProjectReference>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
