--- a/SummerSunConsoleHost/SummerSunConsoleHost.csproj
+++ b/SummerSunConsoleHost/SummerSunConsoleHost.csproj
@@ -73,7 +73,7 @@
     <None Include="packages.config" />
   </ItemGroup>
   <ItemGroup>
-    <ProjectReference Include="..\SummerSun\BuildingApi.csproj">
+    <ProjectReference Include="..\BuildingApi\BuildingApi.csproj">
       <Project>{b29bc045-00da-4b3c-a0fa-aeb2d72fc51e}</Project>
       <Name>BuildingApi</Name>
     </ProjectReference>
