--- a/SummerSunMVC/packages.config
+++ b/SummerSunMVC/packages.config
@@ -5,6 +5,8 @@
   <package id="EntityFramework" version="6.0.0" targetFramework="net45" />
   <package id="jQuery" version="1.10.2" targetFramework="net45" />
   <package id="jQuery.Validation" version="1.11.1" targetFramework="net45" />
+  <package id="log4net" version="2.0.3" targetFramework="net451" />
+  <package id="logentries.core" version="2.4.3" targetFramework="net451" />
   <package id="Microsoft.AspNet.Identity.Core" version="1.0.0" targetFramework="net45" />
   <package id="Microsoft.AspNet.Identity.EntityFramework" version="1.0.0" targetFramework="net45" />
   <package id="Microsoft.AspNet.Identity.Owin" version="1.0.0" targetFramework="net45" />
@@ -23,6 +25,7 @@
   <package id="Microsoft.Owin.Security.OAuth" version="2.0.0" targetFramework="net45" />
   <package id="Microsoft.Owin.Security.Twitter" version="2.0.0" targetFramework="net45" />
   <package id="Microsoft.Web.Infrastructure" version="1.0.0.0" targetFramework="net45" />
+  <package id="Microsoft.WindowsAzure.ConfigurationManager" version="2.0.1.0" targetFramework="net451" />
   <package id="Modernizr" version="2.6.2" targetFramework="net45" />
   <package id="Newtonsoft.Json" version="5.0.6" targetFramework="net45" />
   <package id="Ninject" version="3.2.0.0" targetFramework="net45" />
