--- a/SummerSunMVC/Web.config
+++ b/SummerSunMVC/Web.config
@@ -5,7 +5,7 @@
   -->
 <configuration>
   <configSections>
-    <section name="log4net" type="log4net.Config.Log4NetConfigurationSectionHandler,Log4net" />
+    <section name="nlog" type="NLog.Config.ConfigSectionHandler, NLog" />
     <!-- For more information on Entity Framework configuration, visit http://go.microsoft.com/fwlink/?LinkID=237468 -->
     <section name="entityFramework" type="System.Data.Entity.Internal.ConfigFile.EntityFrameworkSection, EntityFramework, Version=6.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" requirePermission="false" />
   </configSections>
@@ -28,7 +28,7 @@
     <add key="JciBuildingApiEndpoint" value="https://qa-apiproxy.panoptix.com/building" />
     <add key="JciCompanyApiEndpoint" value="https://qa-apiproxy.panoptix.com/companies" />
     
-    </appSettings>
+  </appSettings>
   <!--
     For a description of web.config changes see http://go.microsoft.com/fwlink/?LinkId=235367.
 
@@ -77,6 +77,10 @@
         <assemblyIdentity name="log4net" publicKeyToken="669e0ddf0bb1aa2a" culture="neutral" />
         <bindingRedirect oldVersion="0.0.0.0-1.2.13.0" newVersion="1.2.13.0" />
       </dependentAssembly>
+      <dependentAssembly>
+        <assemblyIdentity name="NLog" publicKeyToken="5120e14c03d0593c" culture="neutral" />
+        <bindingRedirect oldVersion="0.0.0.0-2.1.0.0" newVersion="2.1.0.0" />
+      </dependentAssembly>
     </assemblyBinding>
   </runtime>
   <entityFramework>
@@ -89,19 +93,15 @@
       <provider invariantName="System.Data.SqlClient" type="System.Data.Entity.SqlServer.SqlProviderServices, EntityFramework.SqlServer" />
     </providers>
   </entityFramework>
-  <log4net>
-    <appender name="LeAppender" type="log4net.Appender.LogentriesAppender, LogentriesLog4net">
-      <Debug value="true" />
-      <HttpPut value="false" />
-      <Ssl value="false" />
-      <layout type="log4net.Layout.PatternLayout">
-        <param name="ConversionPattern" value="%d{ddd MMM dd HH:mm:ss zzz yyyy} %logger %: %level%, %m, " />
-      </layout>
-    </appender>
-    <root>
-      <level value="ALL" />
-      <appender-ref ref="LeAppender" />
-    </root>
-  </log4net>
-
+  <nlog>
+    <extensions>
+      <add assembly="LogentriesNLog" />
+    </extensions>
+    <targets>
+      <target name="logentries" type="Logentries" debug="true" httpPut="false" ssl="false" layout="${date:format=ddd MMM dd} ${time:format=HH:mm:ss} ${date:format=zzz yyyy} ${logger} : ${LEVEL}, ${message}" />
+    </targets>
+    <rules>
+      <logger name="*" minLevel="Debug" appendTo="logentries" />
+    </rules>
+  </nlog>
 </configuration>
