--- a/SummerSunMVC/packages.config
+++ b/SummerSunMVC/packages.config
@@ -5,8 +5,8 @@
   <package id="EntityFramework" version="6.0.0" targetFramework="net45" />
   <package id="jQuery" version="1.10.2" targetFramework="net45" />
   <package id="jQuery.Validation" version="1.11.1" targetFramework="net45" />
-  <package id="log4net" version="2.0.3" targetFramework="net451" />
   <package id="logentries.core" version="2.4.3" targetFramework="net451" />
+  <package id="logentries.nlog" version="2.2.0" targetFramework="net451" />
   <package id="Microsoft.AspNet.Identity.Core" version="1.0.0" targetFramework="net45" />
   <package id="Microsoft.AspNet.Identity.EntityFramework" version="1.0.0" targetFramework="net45" />
   <package id="Microsoft.AspNet.Identity.Owin" version="1.0.0" targetFramework="net45" />
@@ -32,6 +32,9 @@
   <package id="Ninject.MVC3" version="3.2.0.0" targetFramework="net45" />
   <package id="Ninject.Web.Common" version="3.2.0.0" targetFramework="net45" />
   <package id="Ninject.Web.Common.WebHost" version="3.2.0.0" targetFramework="net45" />
+  <package id="NLog" version="2.1.0" targetFramework="net451" />
+  <package id="NLog.Config" version="2.1.0" targetFramework="net451" />
+  <package id="NLog.Schema" version="2.1.0" targetFramework="net451" />
   <package id="Owin" version="1.0" targetFramework="net45" />
   <package id="Respond" version="1.2.0" targetFramework="net45" />
   <package id="WebActivatorEx" version="2.0" targetFramework="net45" />
