Add equipment treegrid

--- a/SummerSunMVC/SummerSunMVC.csproj
+++ b/SummerSunMVC/SummerSunMVC.csproj
@@ -184,12 +184,12 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="App_Start\BundleConfig.cs" />
-    <Compile Include="App_Start\BuildingAPIClient.cs" />
     <Compile Include="App_Start\FilterConfig.cs" />
     <Compile Include="App_Start\NinjectWebCommon.cs" />
     <Compile Include="App_Start\RouteConfig.cs" />
     <Compile Include="App_Start\Startup.Auth.cs" />
     <Compile Include="Controllers\AccountController.cs" />
+    <Compile Include="Controllers\EquipmentController.cs" />
     <Compile Include="Controllers\MultiCompanyController.cs" />
     <Compile Include="Controllers\PointsController.cs" />
     <Compile Include="Filter\TrackTimeFilter.cs" />
@@ -198,7 +198,7 @@
     </Compile>
     <Compile Include="Models\AccountViewModels.cs" />
     <Compile Include="Models\IdentityModels.cs" />
-    <Compile Include="Models\SingleCompanyPointStatusVM.cs" />
+    <Compile Include="Models\EquipmentReportViewModels.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Services\IBuildingService.cs" />
     <Compile Include="Services\MockBuildingService.cs" />
@@ -208,6 +208,11 @@
   <ItemGroup>
     <Content Include="Content\bootstrap.css" />
     <Content Include="Content\bootstrap.min.css" />
+    <Content Include="Content\css\jquery.treegrid.css" />
+    <Content Include="Content\js\jquery.cookie.js" />
+    <Content Include="Content\js\jquery.treegrid.bootstrap2.js" />
+    <Content Include="Content\js\jquery.treegrid.bootstrap3.js" />
+    <Content Include="Content\js\jquery.treegrid.js" />
     <Content Include="favicon.ico" />
     <Content Include="fonts\glyphicons-halflings-regular.svg" />
     <Content Include="Global.asax" />
@@ -257,6 +262,7 @@
     <Content Include="Views\Points\PointStatusPartial.cshtml" />
     <Content Include="Views\Points\Details.cshtml" />
     <Content Include="Views\MultiCompany\Index.cshtml" />
+    <Content Include="Views\Equipment\Index.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
