--- a/SummerSunConsoleHost/App.config
+++ b/SummerSunConsoleHost/App.config
@@ -1,8 +1,8 @@
 ﻿<?xml version="1.0" encoding="utf-8" ?>
 <configuration>
     <appSettings>
-      <add key="JciClientId" value="" />
-      <add key="JciClientSecret" value="" />
+      <add key="JciClientId" value="000f678d" />
+      <add key="JciClientSecret" value="40f6ef930ae7fee6bbb7611fca81fb8b" />
       <add key="JciTokenEndpoint" value="https://ims-qa.johnsoncontrols.com/issue/oauth2/token" />
       <add key="JciBuildingApiEndpoint" value="https://qa-apiproxy.panoptix.com/building" />
       <add key="JciCompanyApiEndpoint" value="https://qa-apiproxy.panoptix.com/companies" />
