--- a/SummerSunConsoleHost/SummerSunConsoleHost.csproj
+++ b/SummerSunConsoleHost/SummerSunConsoleHost.csproj
@@ -65,9 +65,7 @@
   <ItemGroup>
     <Compile Include="SummerSunNinjectBindings.cs" />
     <Compile Include="Options.cs" />
-    <Compile Include="..\..\..\..\Users\chazelp\Desktop\Program.cs">
-      <Link>Program.cs</Link>
-    </Compile>
+    <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Settings.cs" />
   </ItemGroup>
