--- a/BuildingApi/BuildingApi.csproj
+++ b/BuildingApi/BuildingApi.csproj
@@ -45,8 +45,8 @@
     <Reference Include="Microsoft.CSharp" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="ApiClient.cs" />
     <Compile Include="Company.cs" />
-    <Compile Include="CompanyClient.cs" />
     <Compile Include="EntityLink.cs" />
     <Compile Include="Equipment.cs" />
     <Compile Include="EquipmentType.cs" />
@@ -61,9 +61,7 @@
     <Compile Include="SampleSummary.cs" />
     <Compile Include="Token.cs" />
     <Compile Include="TokenClient.cs" />
-    <Compile Include="EquipmentClient.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="TypesClient.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="packages.config" />
