--- a/SummerSunMVC/packages.config
+++ b/SummerSunMVC/packages.config
@@ -2,6 +2,8 @@
 <packages>
   <package id="Antlr" version="3.4.1.9004" targetFramework="net45" />
   <package id="bootstrap" version="3.0.0" targetFramework="net45" />
+  <package id="BuildingApi" version="0.2.1.0" targetFramework="net451" />
+  <package id="Common.Logging" version="2.0.0" targetFramework="net451" />
   <package id="EntityFramework" version="6.0.0" targetFramework="net45" />
   <package id="Flurl" version="0.2.1" targetFramework="net451" />
   <package id="jQuery" version="1.10.2" targetFramework="net45" />
@@ -15,7 +17,10 @@
   <package id="Microsoft.AspNet.Razor" version="3.0.0" targetFramework="net45" />
   <package id="Microsoft.AspNet.Web.Optimization" version="1.1.1" targetFramework="net45" />
   <package id="Microsoft.AspNet.WebPages" version="3.0.0" targetFramework="net45" />
+  <package id="Microsoft.Bcl" version="1.1.3" targetFramework="net451" />
+  <package id="Microsoft.Bcl.Build" version="1.0.10" targetFramework="net451" />
   <package id="Microsoft.jQuery.Unobtrusive.Validation" version="3.0.0" targetFramework="net45" />
+  <package id="Microsoft.Net.Http" version="2.2.15" targetFramework="net451" />
   <package id="Microsoft.Owin" version="2.0.0" targetFramework="net45" />
   <package id="Microsoft.Owin.Host.SystemWeb" version="2.0.0" targetFramework="net45" />
   <package id="Microsoft.Owin.Security" version="2.0.0" targetFramework="net45" />
