--- a/BuildingApi/BuildingApi.csproj
+++ b/BuildingApi/BuildingApi.csproj
@@ -67,6 +67,7 @@
     <Compile Include="Sample.cs" />
     <Compile Include="SampleBatch.cs" />
     <Compile Include="SampleSummary.cs" />
+    <Compile Include="Space.cs" />
     <Compile Include="Token.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="TokenClientBase.cs" />
