--- a/SummerSunConsoleHost/App.config
+++ b/SummerSunConsoleHost/App.config
@@ -1,10 +1,10 @@
-﻿<?xml version="1.0" encoding="utf-8" ?>
+﻿<?xml version="1.0" encoding="utf-8"?>
 <configuration>
     <appSettings>
       <add key="JciClientId" value="" />
       <add key="JciClientSecret" value="" />
-      <add key="JciTokenEndpoint" value="https://ims-qa.johnsoncontrols.com/issue/oauth2/token" />
-      <add key="JciBuildingApiEndpoint" value="https://qa-apiproxy.panoptix.com" />
+      <add key="JciTokenEndpoint" value="https://identity.johnsoncontrols.com/issue/oauth2/token" />
+      <add key="JciBuildingApiEndpoint" value="https://api.panoptix.com/" />
 
     </appSettings>
     <system.net>
@@ -17,4 +17,16 @@
     <startup> 
         <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.5.1" />
     </startup>
+  <runtime>
+    <assemblyBinding xmlns="urn:schemas-microsoft-com:asm.v1">
+      <dependentAssembly>
+        <assemblyIdentity name="Common.Logging" publicKeyToken="af08829b84f0328e" culture="neutral" />
+        <bindingRedirect oldVersion="0.0.0.0-2.2.0.0" newVersion="2.2.0.0" />
+      </dependentAssembly>
+      <dependentAssembly>
+        <assemblyIdentity name="Newtonsoft.Json" publicKeyToken="30ad4fe6b2a6aeed" culture="neutral" />
+        <bindingRedirect oldVersion="0.0.0.0-6.0.0.0" newVersion="6.0.0.0" />
+      </dependentAssembly>
+    </assemblyBinding>
+  </runtime>
 </configuration>
