Async API method support

--- a/BuildingApi.Test/BuildingApi.Test.csproj
+++ b/BuildingApi.Test/BuildingApi.Test.csproj
@@ -65,10 +65,12 @@
     </Otherwise>
   </Choose>
   <ItemGroup>
+    <Compile Include="ApiClientTest.cs" />
     <Compile Include="EntityTest.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
+    <None Include="App.config" />
     <None Include="packages.config" />
   </ItemGroup>
   <ItemGroup>
