--- a/BuildingApi/packages.config
+++ b/BuildingApi/packages.config
@@ -1,7 +1,7 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
-  <package id="Common.Logging" version="2.1.2" targetFramework="net451" />
   <package id="Flurl" version="1.0.1" targetFramework="net451" />
+  <package id="LibLog" version="4.2.3" targetFramework="net451" developmentDependency="true" />
   <package id="Microsoft.Bcl" version="1.1.9" targetFramework="net451" />
   <package id="Microsoft.Bcl.Build" version="1.0.14" targetFramework="net451" />
   <package id="Microsoft.Net.Http" version="2.2.22" targetFramework="net451" />
